# HelloDX12

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/Models/HorseStatue/: HorseStatue.gltf
Assets/Models/Sponza/: Sponza.gltf
Assets/Models/Zaku/: Zaku.gltf
CMake/: AgilitySDK.cmake  Copy.cmake  DXC.cmake
HelloDX12/: CMakeLists.txt  D3D12HelloTexture.cpp  HelloDX12.sln  HelloDX12.vcxproj  HelloDX12.vcxproj.filters  main.cpp  packages.config
HelloDX12/Header/: AppBase.h  AppSimple.h  Camera.h  Configs.h  ConsoleDisplay.h  ConstantBufferStructs.h  ConstantBuffers.h  ConstantDefinitions.h  DX12Context.h  DX12Exception.h  DX12Helper.h  DX12Image.h  DX12Shader.h  DXSample.h  DXSampleHelper.h  IndirectCommand.h  PipelineSimple.h  ResourcesLights.h  RootConstParam.h  Scene.h  Timer.h  UIData.h  UiData__.h  Utility.h  VertexData.h  Win32Application.h  stdafx.h
HelloDX12/Header/Apps/: AppBase.h  AppSimple.h
HelloDX12/Header/DirectX12/: DX12Buffer.h  DX12ConstantBuffer.h  DX12Context.h  DX12Descriptor.h  DX12DescriptorHeap.h  DX12DescriptorManager.h  DX12Exception.h  DX12Helper.h  DX12Image.h  DX12RootSignature.h  DX12Shader.h
HelloDX12/Header/Pipelines/: PipelineBRDFLUT.h  PipelineBase.h  PipelineClear.h  PipelineDiffuseMap.h  PipelineEquirect2Cube.h  PipelineImGui.h  PipelineMipmap.h  PipelinePresent.h  PipelineResolve.h  PipelineSimple.h  PipelineSkybox.h  PipelineSpecularMap.h  PipelineTonemap.h
HelloDX12/Header/Resources/: ResourcesBase.h  ResourcesIBL.h  ResourcesLights.h  ResourcesShared.h
HelloDX12/Header/Scene/: Mesh.h  Model.h  Scene.h  ScenePODs.h  ShapeGenerator.h  TextureMapper.h  VertexData.h
HelloDX12/Shader/: BlinnPhong.hlsl  CameraData.hlsli  Equirect2Cube.hlsl  LightData.hlsli  MeshData.hlsli  Mipmap.hlsl  MipmapArray.hlsl  ModelData.hlsli  Shader.hlsl  Skybox.hlsl  Tonemap.hlsl  VertexData.hlsli
HelloDX12/Shader/IBL/: Ambient.hlsli  BRDFLUT.hlsl  Diffuse.hlsl  Hammersley.hlsli  Specular.hlsl  ThreadIdToXYZ.hlsli
HelloDX12/Shader/PBR/: CPBR.hlsli  Header.hlsli  NormalTBN.hlsli  PBR.hlsl  Radiance.hlsli
HelloDX12/Source/: AppBase.cpp  AppSimple.cpp  Camera.cpp  ConsoleDisplay.cpp  D3D12HelloTexture.cpp  DX12Context.cpp  DX12Exception.cpp  DX12Image.cpp  DX12Shader.cpp  DXSample.cpp  Main.cpp  PipelineSimple.cpp  ResourcesLights.cpp  Scene.cpp  Timer.cpp  Utility.cpp  Win32Application.cpp  main.cpp
HelloDX12/Source/Apps/: AppBase.cpp  AppSimple.cpp
HelloDX12/Source/DirectX12/: DX12Buffer.cpp  DX12ConstantBuffer.cpp  DX12Context.cpp  DX12Descriptor.cpp  DX12DescriptorHeap.cpp  DX12DescriptorManager.cpp  DX12Exception.cpp  DX12Image.cpp  DX12RootSignature.cpp  DX12Shader.cpp
HelloDX12/Source/Pipelines/: PipelineBRDFLUT.cpp  PipelineBase.cpp  PipelineClear.cpp  PipelineDiffuseMap.cpp  PipelineEquirect2Cube.cpp  PipelineImGui.cpp  PipelineMipmap.cpp  PipelinePresent.cpp  PipelineResolve.cpp  PipelineSimple.cpp  PipelineSkybox.cpp  PipelineSpecularMap.cpp  PipelineTonemap.cpp
HelloDX12/Source/Resources/: ResourcesIBL.cpp  ResourcesLights.cpp  ResourcesShared.cpp
HelloDX12/Source/Scene/: Mesh.cpp  Model.cpp  Scene.cpp  ShapeGenerator.cpp
